fix display problem on mobile device

--- a/drink-water/style.css
+++ b/drink-water/style.css
@@ -1,13 +1,10 @@
-* {
-    box-sizing: border-box;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
 
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
