--- a/pokedex/style.css
+++ b/pokedex/style.css
@@ -4,6 +4,9 @@
     margin: 0;
     padding:0;
 }
+html{
+    font-size:18px;
+}
 
 body {
     background: linear-gradient(90deg,#9198e5,rgb(245, 245, 183));
@@ -62,7 +65,7 @@ body {
     border-radius: 8px;
     text-align: center;
     margin: 10px auto;
-    font-size: 5px;
+    font-size: 0.7rem;
     vertical-align: middle;
     
 }
@@ -84,5 +87,5 @@ body {
     margin: 10px;
     text-align: center;
     font-weight: normal;
-    font-size: 2px;
+    font-size: 0.8rem;
 }
